<resources>
    <!-- Actividades -->
    <string name="app_name">OkExpress</string>
    <string name="menuPrincipal">Menú principal</string>
    <string name="perfilActividad">Perfil</string>
    <string name="compraActivity">Realizar compra</string>
    <string name="registroActivity">Registro</string>

    <!-- Login -->
    <string name="loText">Login</string>
    <string name="loBtnRegistro">Registrarse</string>
    <string name="loBtnEntrar">Entrar</string>
    <string name="loHintUser">usuario</string>
    <string name="loHintPass">password</string>

    <!-- Menu principal -->
    <string name="mpBtnPedir">Pedir</string>
    <string name="mpTwProducto">Productos</string>
    <string name="mpBtnPerfil">Perfil</string>
    <string name="mpBtnAdd">Agregar producto</string>
    <string name="mpErrorPedido">Selecciona al menos un producto antes de hacer el pedido</string>

    <!-- Perfil -->
    <string name="pPerfil">Perfil</string>
    <string name="pDatos">Datos personales</string>
    <string name="pHistorial">Historial de compras</string>
    <string name="pFavoritos">Favoritos</string>
    <string name="pMediosDePago">Medios de pago</string>
    <string name="pNombre">Nombre:</string>
    <string name="pRut">Rut:</string>
    <string name="pBtnBorrar">Eliminar medio de pago</string>
    <string name="pBtnAgregar">Agregar medio de pago</string>

    <!-- Compra -->
    <string name="cTitulo">Estas comprando estos productos</string>
    <string name="cProducto">Productos</string>
    <string name="cDelivery">¿Delivery?</string>
    <string name="cRBSi">Sí</string>
    <string name="cRBNo">No</string>
    <string name="cTotal">Total:</string>
    <string name="cBtnPagar">Pagar</string>
    <string name="cBtnCancelar">Cancelar</string>
    <string name="cBtnMedioPago">Medio de Pago</string>

    <!-- Registro -->
    <string name="rTitulo">Por favor ingresa los siguientes datos</string>
    <string name="rUser">Usuario:</string>
    <string name="rPass">Password:</string>
    <string name="rName">Nombre</string>
    <string name="rApellido">Apellido</string>
    <string name="rFechaDeNacimiento">Fecha de nacimiento</string>
    <string name="rBtnGetFecha">Ingresar fecha</string>
    <string name="rRut">Run:</string>
    <string name="rBtnListo">¡Listo!</string>
    <string name="rFechaHint">dd/mm/aaaa</string>

</resources>
