<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PerfilActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pPerfil"
        android:textSize="40sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pDatos"
        android:textSize="30sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pNombre"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/pRut"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="nombre de prueba"
                android:textSize="20sp"
                android:id="@+id/pTvNombre"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="18.782.565-2"
                android:textSize="20sp"
                android:id="@+id/pTwRut"/>
        </LinearLayout>

    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pMediosDePago"
        android:id="@+id/pBtnHistorial"
        android:onClick="verHistorial"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pFavoritos"
        android:id="@+id/pBtnFavoritos"
        android:onClick="verFavoritos"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pHistorial"
        android:textSize="30sp" />

    <ListView
        android:id="@+id/PerfillistView"
        android:layout_width="match_parent"
        android:layout_height="392dp"
        tools:context=".PerfilActivity"></ListView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pBtnAgregar"
            android:id="@+id/pBtnAgregar"
            android:onClick="agregarMedioDePago"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pBtnBorrar"
            android:layout_weight="1"
            android:id="@+id/pBtnEliminar"
            android:onClick="eliminarMedioDePago"/>
    </LinearLayout>

</LinearLayout>