<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuPrincipal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:text="@string/mpTwProducto"
            android:textSize="30sp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mpBtnPerfil"
            android:onClick="perfil"
            android:id="@+id/mBtnPerfil" />
    </LinearLayout>

    <ListView
        android:id="@+id/mPlistView"
        android:layout_width="match_parent"
        android:layout_height="411dp"
        android:layout_weight="1"
        android:listSelector="@color/colorRojo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mpBtnAdd"
                android:onClick="addProduct"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mpBtnPedir"
                android:layout_weight="1"
                android:onClick="realizarPedido"/>


        </LinearLayout>

        <TextView
            android:id="@+id/mPCarrito"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:text="produtos: 0 | subTotal: 0" />

    </LinearLayout>


</LinearLayout>
